--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.446.0",
     "mediasoup": "^3.14.14",
     "mediasoup-client": "^3.7.16",
     "next": "14.2.8",
